examples/test/testpolicy5118.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5118
  namespace: namespace238
spec:
  podSelector:
    matchLabels:
      key22: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value3
      podSelector:
        matchLabels:
          key4: value5
          key44: value27
          key30: value0
